Temporarily remove fetch optimization