@@ -62,7 +62,6 @@ import io.crate.planner.PlannerContext;
 import io.crate.planner.SubqueryPlanner;
 import io.crate.planner.TableStats;
 import io.crate.planner.WhereClauseOptimizer;
-import io.crate.planner.consumer.FetchMode;
 import io.crate.planner.consumer.InsertFromSubQueryPlanner;
 import io.crate.planner.optimizer.Optimizer;
 import io.crate.planner.optimizer.rule.DeduplicateOrder;
@@ -87,7 +86,6 @@ import io.crate.planner.optimizer.rule.RewriteFilterOnOuterJoinToInnerJoin;
 
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Locale;
@@ -164,16 +162,12 @@ public class LogicalPlanner {
         SubqueryPlanner subqueryPlanner = new SubqueryPlanner(s -> planSubSelect(s, subSelectPlannerContext));
         LogicalPlan.Builder planBuilder = prePlan(
             relation,
-            FetchMode.NEVER_CLEAR,
             subqueryPlanner,
-            true,
             functions,
             plannerContext.transactionContext());
 
         planBuilder = tryOptimizeForInSubquery(selectSymbol, relation, planBuilder);
-        LogicalPlan optimizedPlan = optimizer.optimize(maybeApplySoftLimit.apply(planBuilder.build(tableStats,
-                                                                                                   Set.of(),
-                                                                                                   Collections.emptySet())));
+        LogicalPlan optimizedPlan = optimizer.optimize(maybeApplySoftLimit.apply(planBuilder.build(tableStats, Set.of())));
         return new RootRelationBoundary(optimizedPlan);
     }
 
@@ -196,23 +190,21 @@ public class LogicalPlanner {
     public LogicalPlan normalizeAndPlan(AnalyzedRelation analyzedRelation,
                                         PlannerContext plannerContext,
                                         SubqueryPlanner subqueryPlanner,
-                                        FetchMode fetchMode,
                                         Set<PlanHint> hints) {
         CoordinatorTxnCtx coordinatorTxnCtx = plannerContext.transactionContext();
         AnalyzedRelation relation = relationNormalizer.normalize(analyzedRelation, coordinatorTxnCtx);
-        LogicalPlan logicalPlan = plan(relation, fetchMode, subqueryPlanner, true, functions, coordinatorTxnCtx)
-            .build(tableStats, hints, new HashSet<>(relation.outputs()));
+        LogicalPlan logicalPlan = plan(relation, subqueryPlanner, true, functions, coordinatorTxnCtx)
+            .build(tableStats, hints);
 
         return optimizer.optimize(logicalPlan);
     }
 
     static LogicalPlan.Builder plan(AnalyzedRelation relation,
-                                    FetchMode fetchMode,
                                     SubqueryPlanner subqueryPlanner,
                                     boolean isLastFetch,
                                     Functions functions,
                                     CoordinatorTxnCtx txnCtx) {
-        LogicalPlan.Builder builder = prePlan(relation, fetchMode, subqueryPlanner, isLastFetch, functions, txnCtx);
+        LogicalPlan.Builder builder = prePlan(relation, subqueryPlanner, functions, txnCtx);
         if (isLastFetch) {
             return builder;
         }
@@ -220,14 +212,12 @@ public class LogicalPlanner {
     }
 
     private static LogicalPlan.Builder prePlan(AnalyzedRelation relation,
-                                               FetchMode fetchMode,
                                                SubqueryPlanner subqueryPlanner,
-                                               boolean isLastFetch,
                                                Functions functions,
                                                CoordinatorTxnCtx txnCtx) {
         SplitPoints splitPoints = SplitPointsBuilder.create(relation);
         return MultiPhase.createIfNeeded(
-            FetchOrEval.create(
+            Eval.create(
                 Limit.create(
                     Order.create(
                         Distinct.create(
@@ -240,7 +230,6 @@ public class LogicalPlanner {
                                                 splitPoints.toCollect(),
                                                 relation.where(),
                                                 subqueryPlanner,
-                                                fetchMode,
                                                 functions,
                                                 txnCtx
                                             ),
@@ -261,10 +250,7 @@ public class LogicalPlanner {
                     relation.limit(),
                     relation.offset()
                 ),
-                relation.outputs(),
-                fetchMode,
-                isLastFetch,
-                relation.limit() != null
+                relation.outputs()
             ),
             relation,
             subqueryPlanner
@@ -278,8 +264,7 @@ public class LogicalPlanner {
             return GroupHashAggregate.create(source, groupKeys, aggregates);
         }
         if (!aggregates.isEmpty()) {
-            return (tableStats, hints, usedColumns) ->
-                new HashAggregate(source.build(tableStats, hints, extractColumns(aggregates)), aggregates);
+            return (tableStats, hints) -> new HashAggregate(source.build(tableStats, hints), aggregates);
         }
         return source;
     }
@@ -288,14 +273,13 @@ public class LogicalPlanner {
                                                         List<Symbol> toCollect,
                                                         WhereClause where,
                                                         SubqueryPlanner subqueryPlanner,
-                                                        FetchMode fetchMode,
                                                         Functions functions,
                                                         CoordinatorTxnCtx txnCtx) {
         if (analyzedRelation instanceof AnalyzedView) {
-            return plan(((AnalyzedView) analyzedRelation).relation(), fetchMode, subqueryPlanner, false, functions, txnCtx);
+            return plan(((AnalyzedView) analyzedRelation).relation(), subqueryPlanner, false, functions, txnCtx);
         }
         if (analyzedRelation instanceof AliasedAnalyzedRelation) {
-            return plan(((AliasedAnalyzedRelation) analyzedRelation).relation(), fetchMode, subqueryPlanner, false, functions, txnCtx);
+            return plan(((AliasedAnalyzedRelation) analyzedRelation).relation(), subqueryPlanner, false, functions, txnCtx);
         }
         if (analyzedRelation instanceof AbstractTableRelation) {
             return Collect.create(((AbstractTableRelation) analyzedRelation), toCollect, where);
@@ -324,7 +308,7 @@ public class LogicalPlanner {
 
                 Optional<DocKeys> docKeys = detailedQuery.docKeys();
                 if (docKeys.isPresent()) {
-                    return (tableStats, hints, usedBeforeNextFetch) ->
+                    return (tableStats, hints) ->
                         new Get(docTableRelation, docKeys.get(), toCollect, tableStats);
                 }
                 return Collect.create(docTableRelation, toCollect, new WhereClause(
@@ -336,7 +320,7 @@ public class LogicalPlanner {
                 return Collect.create(((TableRelation) subRelation), toCollect, where);
             }
             return Filter.create(
-                plan(subRelation, fetchMode, subqueryPlanner, false, functions, txnCtx),
+                plan(subRelation, subqueryPlanner, false, functions, txnCtx),
                 where
             );
         }
@@ -430,7 +414,7 @@ public class LogicalPlanner {
         @Override
         public LogicalPlan visitSelectStatement(AnalyzedRelation relation, PlannerContext context) {
             SubqueryPlanner subqueryPlanner = new SubqueryPlanner((s) -> planSubSelect(s, context));
-            LogicalPlan logicalPlan = normalizeAndPlan(relation, context, subqueryPlanner, FetchMode.MAYBE_CLEAR, Set.of());
+            LogicalPlan logicalPlan = normalizeAndPlan(relation, context, subqueryPlanner, Set.of());
             return new RootRelationBoundary(logicalPlan);
         }
 
